--- a/certifications.html
+++ b/certifications.html
@@ -69,24 +69,36 @@ permalink: /certifications/
       </div>
       <h3>{{ cert.title }}</h3>
       <p>{{ cert.description }}</p>
-      <div class="certification-meta">
-        <span class="meta-item">
-          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+      <div class="certification-actions">
+        {% if cert_posts.size > 0 %}
+        <a href="/certifications/{{ cert.name }}/#{{ cert.name }}" class="action-button posts-button" onclick="event.stopPropagation();" aria-label="{{ cert.title }} 관련 포스팅 보기">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
             <polyline points="14 2 14 8 20 8"></polyline>
             <line x1="16" y1="13" x2="8" y2="13"></line>
             <line x1="16" y1="17" x2="8" y2="17"></line>
           </svg>
-          {{ cert_posts.size }} posts
+          <span>포스팅 ({{ cert_posts.size }})</span>
+        </a>
+        {% else %}
+        <span class="action-button posts-button disabled" aria-label="관련 포스팅 없음">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="16" y1="13" x2="8" y2="13"></line>
+            <line x1="16" y1="17" x2="8" y2="17"></line>
+          </svg>
+          <span>포스팅 없음</span>
         </span>
+        {% endif %}
         {% if cert.official_url %}
-        <a href="{{ cert.official_url }}" target="_blank" rel="noopener noreferrer" class="meta-item official-link" onclick="event.stopPropagation();" aria-label="{{ cert.title }} 공식 사이트 (새 창)">
-          <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+        <a href="{{ cert.official_url }}" target="_blank" rel="noopener noreferrer" class="action-button official-button" onclick="event.stopPropagation();" aria-label="{{ cert.title }} 공식 사이트 (새 창)">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
             <polyline points="15 3 21 3 21 9"></polyline>
             <line x1="10" y1="14" x2="21" y2="3"></line>
           </svg>
-          공식 사이트
+          <span>공식 사이트</span>
         </a>
         {% endif %}
       </div>
@@ -253,43 +265,81 @@ permalink: /certifications/
   font-size: 0.95rem;
 }
 
-.certification-meta {
+.certification-actions {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.75rem;
   padding-top: 1rem;
   border-top: 1px solid var(--border);
   flex-wrap: wrap;
 }
 
-.meta-item {
+.action-button {
   display: inline-flex;
   align-items: center;
   gap: 0.5rem;
+  padding: 0.625rem 1rem;
   font-size: 0.875rem;
-  color: var(--text-secondary);
   font-weight: 500;
-}
-
-.meta-item svg {
-  flex-shrink: 0;
-  color: var(--text-secondary);
-}
-
-.meta-item.official-link {
-  color: var(--primary);
   text-decoration: none;
-  transition: color 0.2s ease;
+  border-radius: 6px;
+  transition: all 0.2s ease;
+  border: 1px solid transparent;
+  cursor: pointer;
+  white-space: nowrap;
 }
 
-.meta-item.official-link:hover {
-  color: var(--primary-dark, #0056b3);
+.action-button svg {
+  flex-shrink: 0;
+  width: 16px;
+  height: 16px;
 }
 
-.meta-item.official-link:focus-visible {
+.action-button.posts-button {
+  background: var(--bg-secondary);
+  color: var(--text-primary);
+  border-color: var(--border);
+}
+
+.action-button.posts-button:hover {
+  background: var(--bg-primary);
+  border-color: var(--primary);
+  color: var(--primary);
+  transform: translateY(-1px);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.action-button.posts-button:focus-visible {
   outline: 2px solid var(--primary);
   outline-offset: 2px;
-  border-radius: 4px;
+}
+
+.action-button.posts-button.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
+.action-button.official-button {
+  background: var(--primary);
+  color: white;
+  border-color: var(--primary);
+}
+
+.action-button.official-button:hover {
+  background: var(--primary-dark, #0056b3);
+  border-color: var(--primary-dark, #0056b3);
+  transform: translateY(-1px);
+  box-shadow: 0 2px 8px rgba(0, 123, 255, 0.3);
+}
+
+.action-button.official-button:focus-visible {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+}
+
+.action-button:active {
+  transform: translateY(0);
 }
 
 .certification-section {
@@ -352,10 +402,15 @@ permalink: /certifications/
     font-size: 1.5rem;
   }
 
-  .certification-meta {
+  .certification-actions {
     flex-direction: column;
-    align-items: flex-start;
-    gap: 0.75rem;
+    align-items: stretch;
+    gap: 0.5rem;
+  }
+
+  .action-button {
+    width: 100%;
+    justify-content: center;
   }
 }
 </style>
