--- a/certifications.html
+++ b/certifications.html
@@ -52,26 +52,28 @@ permalink: /certifications/
         {% assign cert_posts = cert_posts | push: post %}
       {% endif %}
     {% endfor %}
-    <a href="/certifications/{{ cert.name }}/" class="certification-card card" role="listitem" aria-label="{{ cert.title }} 자격증 상세 페이지로 이동">
-      <div class="certification-icon {{ cert.name }}" aria-hidden="true">
-        {% case cert.icon %}
-          {% when 'cloud' %}
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"/></svg>
-          {% when 'shield' %}
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
-          {% when 'code' %}
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
-          {% when 'cube' %}
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><polyline points="3.27 6.96 12 12.01 20.73 6.96"/><line x1="12" y1="22.08" x2="12" y2="12"/></svg>
-          {% else %}
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/><line x1="3" y1="9" x2="21" y2="9"/></svg>
-        {% endcase %}
-      </div>
-      <h3>{{ cert.title }}</h3>
-      <p>{{ cert.description }}</p>
+    <div class="certification-card-wrapper">
+      <a href="/certifications/{{ cert.name }}/" class="certification-card card" role="listitem" aria-label="{{ cert.title }} 자격증 상세 페이지로 이동">
+        <div class="certification-icon {{ cert.name }}" aria-hidden="true">
+          {% case cert.icon %}
+            {% when 'cloud' %}
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 10h-1.26A8 8 0 1 0 9 20h9a5 5 0 0 0 0-10z"/></svg>
+            {% when 'shield' %}
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
+            {% when 'code' %}
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
+            {% when 'cube' %}
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><polyline points="3.27 6.96 12 12.01 20.73 6.96"/><line x1="12" y1="22.08" x2="12" y2="12"/></svg>
+            {% else %}
+              <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><line x1="9" y1="3" x2="9" y2="21"/><line x1="3" y1="9" x2="21" y2="9"/></svg>
+          {% endcase %}
+        </div>
+        <h3>{{ cert.title }}</h3>
+        <p>{{ cert.description }}</p>
+      </a>
       <div class="certification-actions">
         {% if cert_posts.size > 0 %}
-        <a href="/certifications/{{ cert.name }}/#{{ cert.name }}" class="action-button posts-button" onclick="event.stopPropagation();" aria-label="{{ cert.title }} 관련 포스팅 보기">
+        <a href="/certifications/{{ cert.name }}/#related-posts" class="action-button posts-button" aria-label="{{ cert.title }} 관련 포스팅 보기">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
             <polyline points="14 2 14 8 20 8"></polyline>
@@ -92,7 +94,7 @@ permalink: /certifications/
         </span>
         {% endif %}
         {% if cert.official_url %}
-        <a href="{{ cert.official_url }}" target="_blank" rel="noopener noreferrer" class="action-button official-button" onclick="event.stopPropagation();" aria-label="{{ cert.title }} 공식 사이트 (새 창)">
+        <a href="{{ cert.official_url }}" target="_blank" rel="noopener noreferrer" class="action-button official-button" aria-label="{{ cert.title }} 공식 사이트 (새 창)">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
             <polyline points="15 3 21 3 21 9"></polyline>
@@ -102,7 +104,7 @@ permalink: /certifications/
         </a>
         {% endif %}
       </div>
-    </a>
+    </div>
     {% endfor %}
   </div>
 
@@ -217,26 +219,39 @@ permalink: /certifications/
   margin-bottom: 3rem;
 }
 
+.certification-card-wrapper {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  background: var(--bg-primary);
+  overflow: hidden;
+  transition: border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.certification-card-wrapper:hover {
+  border-color: var(--primary);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 .certification-card {
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
   text-decoration: none;
   color: inherit;
-  border: 1px solid var(--border);
-  border-radius: 8px;
-  background: var(--bg-primary);
-  transition: border-color 0.2s ease, box-shadow 0.2s ease;
+  flex-grow: 1;
+  transition: background-color 0.2s ease;
 }
 
 .certification-card:hover {
-  border-color: var(--primary);
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: var(--bg-secondary);
 }
 
 .certification-card:focus-visible {
   outline: 2px solid var(--primary);
   outline-offset: 2px;
+  border-radius: 4px;
 }
 
 .certification-icon {
@@ -269,8 +284,9 @@ permalink: /certifications/
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  padding-top: 1rem;
+  padding: 1rem 1.5rem;
   border-top: 1px solid var(--border);
+  background: var(--bg-secondary);
   flex-wrap: wrap;
 }
 
@@ -381,8 +397,16 @@ permalink: /certifications/
     gap: 1rem;
   }
 
+  .certification-card-wrapper {
+    border-radius: 6px;
+  }
+
   .certification-card {
     padding: 1.25rem;
+  }
+
+  .certification-actions {
+    padding: 0.875rem 1.25rem;
   }
 
   .page-header h1 {
