--- a/certifications/aws-saa.html
+++ b/certifications/aws-saa.html
@@ -136,8 +136,38 @@ permalink: /certifications/aws-saa/
     <div class="exam-header">
       <h2>기출문제 및 연습 문제</h2>
       <div class="exam-controls">
+        <div class="view-toggle">
+          <button type="button" class="view-button active" data-view="list" aria-label="리스트 뷰">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+              <line x1="8" y1="6" x2="21" y2="6"></line>
+              <line x1="8" y1="12" x2="21" y2="12"></line>
+              <line x1="8" y1="18" x2="21" y2="18"></line>
+              <line x1="3" y1="6" x2="3.01" y2="6"></line>
+              <line x1="3" y1="12" x2="3.01" y2="12"></line>
+              <line x1="3" y1="18" x2="3.01" y2="18"></line>
+            </svg>
+            리스트
+          </button>
+          <button type="button" class="view-button" data-view="card" aria-label="카드 뷰">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+              <rect x="3" y="3" width="7" height="7"></rect>
+              <rect x="14" y="3" width="7" height="7"></rect>
+              <rect x="14" y="14" width="7" height="7"></rect>
+              <rect x="3" y="14" width="7" height="7"></rect>
+            </svg>
+            카드
+          </button>
+        </div>
+        <div class="search-group">
+          <label for="question-search" class="sr-only">문제 검색</label>
+          <input type="search" id="question-search" class="search-input" placeholder="문제 검색..." aria-label="문제 검색">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="search-icon" aria-hidden="true">
+            <circle cx="11" cy="11" r="8"></circle>
+            <path d="m21 21-4.35-4.35"></path>
+          </svg>
+        </div>
         <div class="filter-group">
-          <label for="topic-filter" class="filter-label">주제 필터:</label>
+          <label for="topic-filter" class="filter-label">주제:</label>
           <select id="topic-filter" class="filter-select" aria-label="주제별 필터">
             <option value="all">전체</option>
             <option value="VPC 및 네트워크 보안">VPC 및 네트워크 보안</option>
@@ -182,7 +212,43 @@ permalink: /certifications/aws-saa/
       <p>다음은 AWS SAA 자격증 준비를 위한 기출문제 및 연습 문제입니다. 각 문제에 답을 선택하고 정답을 확인할 수 있습니다. 각 문제는 관련 포스팅과 연결되어 있어 상세한 설명을 확인할 수 있습니다.</p>
     </div>
 
-    <div class="questions-section" id="questions-container">
+    <!-- 문제 리스트 뷰 (에듀온 스타일) -->
+    <div class="question-list-view" id="question-list-view" style="display: none;">
+      <div class="list-header">
+        <h3>기출문제 리스트</h3>
+        <div class="list-actions">
+          <button type="button" class="action-button" id="download-all-questions" aria-label="모든 문제 다운로드">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+              <polyline points="7 10 12 15 17 10"></polyline>
+              <line x1="12" y1="15" x2="12" y2="3"></line>
+            </svg>
+            전체 다운로드
+          </button>
+        </div>
+      </div>
+      <div class="table-container">
+        <table class="question-table" role="table" aria-label="기출문제 목록">
+          <thead>
+            <tr>
+              <th>번호</th>
+              <th>제목</th>
+              <th>주제</th>
+              <th>CBT</th>
+              <th>바로보기</th>
+              <th>문제다운</th>
+              <th>해설다운</th>
+              <th>문제+해설</th>
+            </tr>
+          </thead>
+          <tbody id="question-table-body">
+            <!-- JavaScript로 동적 생성 -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="questions-section question-card-view" id="questions-container">
       <h3>2024년 이후 기출문제</h3>
       
       <div class="question-card" data-topic="VPC 및 네트워크 보안" data-answer="A">
@@ -776,12 +842,96 @@ permalink: /certifications/aws-saa/
 .exam-controls {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
   flex-wrap: wrap;
   padding: 1rem;
   background: var(--bg-secondary);
   border-radius: 8px;
   border: 1px solid var(--border);
+}
+
+.view-toggle {
+  display: flex;
+  gap: 0.25rem;
+  background: var(--bg-primary);
+  border: 1px solid var(--border);
+  border-radius: 6px;
+  padding: 0.25rem;
+}
+
+.view-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: var(--text-secondary);
+  background: transparent;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.view-button:hover {
+  color: var(--text-primary);
+  background: var(--bg-secondary);
+}
+
+.view-button.active {
+  color: var(--primary);
+  background: var(--primary-light, rgba(37, 99, 235, 0.1));
+}
+
+.view-button svg {
+  width: 16px;
+  height: 16px;
+}
+
+.search-group {
+  position: relative;
+  flex: 1;
+  min-width: 200px;
+  max-width: 400px;
+}
+
+.search-input {
+  width: 100%;
+  padding: 0.5rem 1rem 0.5rem 2.5rem;
+  font-size: 0.9rem;
+  border: 1px solid var(--border);
+  border-radius: 6px;
+  background: var(--bg-primary);
+  color: var(--text-primary);
+  transition: all 0.2s ease;
+}
+
+.search-input:focus {
+  outline: 2px solid var(--primary);
+  outline-offset: 2px;
+  border-color: var(--primary);
+}
+
+.search-icon {
+  position: absolute;
+  left: 0.75rem;
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--text-secondary);
+  pointer-events: none;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .filter-group {
@@ -1164,6 +1314,160 @@ permalink: /certifications/aws-saa/
   line-height: 1.6;
 }
 
+/* 문제 리스트 뷰 스타일 */
+.question-list-view {
+  margin-bottom: 2rem;
+}
+
+.list-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 2px solid var(--border);
+}
+
+.list-header h3 {
+  font-size: 1.5rem;
+  color: var(--text-primary);
+  margin: 0;
+}
+
+.list-actions {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.action-button {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: var(--text-primary);
+  background: var(--bg-primary);
+  border: 1px solid var(--border);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.action-button:hover {
+  background: var(--primary);
+  color: white;
+  border-color: var(--primary);
+}
+
+.action-button svg {
+  width: 16px;
+  height: 16px;
+}
+
+.table-container {
+  overflow-x: auto;
+  border: 1px solid var(--border);
+  border-radius: 8px;
+  background: var(--bg-primary);
+}
+
+.question-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 0.9rem;
+}
+
+.question-table thead {
+  background: var(--bg-secondary);
+  border-bottom: 2px solid var(--border);
+}
+
+.question-table th {
+  padding: 0.75rem 1rem;
+  text-align: left;
+  font-weight: 600;
+  color: var(--text-primary);
+  white-space: nowrap;
+}
+
+.question-table th:first-child {
+  width: 60px;
+}
+
+.question-table th:nth-child(2) {
+  min-width: 300px;
+}
+
+.question-table th:nth-child(3) {
+  width: 150px;
+}
+
+.question-table th:nth-child(n+4) {
+  width: 100px;
+  text-align: center;
+}
+
+.question-table tbody tr {
+  border-bottom: 1px solid var(--border);
+  transition: background-color 0.2s ease;
+}
+
+.question-table tbody tr:hover {
+  background: var(--bg-secondary);
+}
+
+.question-table td {
+  padding: 0.75rem 1rem;
+  color: var(--text-primary);
+  vertical-align: middle;
+}
+
+.question-table td:nth-child(n+4) {
+  text-align: center;
+}
+
+.table-link {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.25rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.875rem;
+  color: var(--primary);
+  text-decoration: none;
+  border: 1px solid var(--border);
+  border-radius: 4px;
+  transition: all 0.2s ease;
+}
+
+.table-link:hover {
+  background: var(--primary);
+  color: white;
+  border-color: var(--primary);
+}
+
+.table-link svg {
+  width: 14px;
+  height: 14px;
+}
+
+  .question-card-view {
+  display: block;
+}
+
+.question-card-view.hidden {
+  display: none;
+}
+
+@keyframes highlight {
+  0%, 100% {
+    background-color: transparent;
+  }
+  50% {
+    background-color: var(--primary-light, rgba(37, 99, 235, 0.2));
+  }
+}
+
 @media (max-width: 768px) {
   .page-header h1 {
     font-size: 2rem;
@@ -1194,14 +1498,25 @@ permalink: /certifications/aws-saa/
     align-items: stretch;
   }
 
+  .view-toggle {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .search-group {
+    max-width: 100%;
+  }
+
   .exam-stats {
     margin-left: 0;
     justify-content: space-between;
+    width: 100%;
   }
 
   .filter-group {
     flex-direction: column;
     align-items: stretch;
+    width: 100%;
   }
 
   .filter-select {
@@ -1221,6 +1536,20 @@ permalink: /certifications/aws-saa/
   .explanation-toggle {
     width: 100%;
     justify-content: center;
+  }
+
+  .question-table {
+    font-size: 0.8rem;
+  }
+
+  .question-table th,
+  .question-table td {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .question-table th:nth-child(2),
+  .question-table td:nth-child(2) {
+    min-width: 200px;
   }
 }
 </style>
