이미지 경로 확인 및 포스팅 업데이트
- 모든 포스팅의 이미지 파일 존재 여부 확인 완료
- 이미지 경로 검증 및 SVG 파일 유효성 확인
- 포스팅 및 인증 페이지 업데이트

--- a/certifications/aws-saa.html
+++ b/certifications/aws-saa.html
@@ -7,7 +7,7 @@ permalink: /certifications/aws-saa/
 <div class="certification-detail-page">
   <div class="page-header">
     <h1>AWS Solutions Architect Associate</h1>
-    <p class="page-description">AWS SAA Certification Preparation and Past Exam Questions - Study Materials Linked to Technical Blog Posts</p>
+    <p class="page-description">기출문제 및 연습 문제를 통한 자격증 준비 - 기술 블로그 포스팅과 연결된 학습 자료</p>
     <div class="header-actions">
       <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/" target="_blank" rel="noopener noreferrer" class="header-action-button official-button">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
