--- a/certifications/isms-p.html
+++ b/certifications/isms-p.html
@@ -7,7 +7,7 @@ permalink: /certifications/isms-p/
 <div class="certification-detail-page">
   <div class="page-header">
     <h1>ISMS-P (정보보안 관리체계 인증)</h1>
-    <p class="page-description">ISMS-P 인증 준비를 위한 기술 블로그 포스팅 및 학습 자료</p>
+    <p class="page-description">기술 블로그 포스팅과 연결된 학습 자료</p>
     <a href="https://isms.kisa.or.kr/" target="_blank" rel="noopener noreferrer" class="official-link">
       공식 사이트 방문 →
     </a>
