--- a/certifications/cka.html
+++ b/certifications/cka.html
@@ -7,7 +7,7 @@ permalink: /certifications/cka/
 <div class="certification-detail-page">
   <div class="page-header">
     <h1>CKA (Certified Kubernetes Administrator)</h1>
-    <p class="page-description">CKA 자격증 준비를 위한 기술 블로그 포스팅 및 학습 자료</p>
+    <p class="page-description">기술 블로그 포스팅과 연결된 학습 자료</p>
     <a href="https://www.cncf.io/certification/cka/" target="_blank" rel="noopener noreferrer" class="official-link">
       공식 사이트 방문 →
     </a>
