--- a/certifications/information-security-engineer.html
+++ b/certifications/information-security-engineer.html
@@ -7,7 +7,7 @@ permalink: /certifications/information-security-engineer/
 <div class="certification-detail-page">
   <div class="page-header">
     <h1>정보보안기사</h1>
-    <p class="page-description">정보보안기사 자격증 준비를 위한 기술 블로그 포스팅 및 학습 자료</p>
+    <p class="page-description">기술 블로그 포스팅과 연결된 학습 자료</p>
     <a href="https://www.q-net.or.kr/crf005.do?id=crf00501&jmCd=1320" target="_blank" rel="noopener noreferrer" class="official-link">
       공식 사이트 방문 →
     </a>
