fix: Certifications 관련 포스팅 제거, 정보보안기사 답변에 관련 포스팅 노출, AWS SAA 제목 통합

--- a/certifications/aws-saa/index.html
+++ b/certifications/aws-saa/index.html
@@ -1,23 +1,19 @@
 ---
 layout: page
 title: AWS Solutions Architect Associate
-description: AWS SAA Certification Preparation and Past Exam Questions - Study Materials Linked to Technical Blog Posts
+description: 기출문제 및 연습 문제를 통한 자격증 준비 - 기술 블로그 포스팅과 연결된 학습 자료
 permalink: /certifications/aws-saa/
 ---
 <div class="certification-detail-page">
-  <div class="page-header">
-    <h1>AWS Solutions Architect Associate</h1>
-    <p class="page-description">기출문제 및 연습 문제를 통한 자격증 준비 - 기술 블로그 포스팅과 연결된 학습 자료</p>
-    <div class="header-actions">
-      <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/" target="_blank" rel="noopener noreferrer" class="header-action-button official-button">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-          <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
-          <polyline points="15 3 21 3 21 9"></polyline>
-          <line x1="10" y1="14" x2="21" y2="3"></line>
-        </svg>
-        <span>공식 사이트</span>
-      </a>
-    </div>
+  <div class="header-actions" style="margin-bottom: 3rem;">
+    <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/" target="_blank" rel="noopener noreferrer" class="header-action-button official-button">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+        <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+        <polyline points="15 3 21 3 21 9"></polyline>
+        <line x1="10" y1="14" x2="21" y2="3"></line>
+      </svg>
+      <span>공식 사이트</span>
+    </a>
   </div>
 
   <div class="exam-questions">
