fix: Vercel 빌드 에러 수정
- vercel.json: --break-system-packages 플래그 추가 (Python externally-managed-environment 에러 해결)
- certifications.html: Liquid 문법 오류 수정 (파이프를 조건문 외부로 이동)

--- a/certifications.html
+++ b/certifications.html
@@ -39,9 +39,10 @@ permalink: /certifications/
       {% comment %} Check tags for certification keywords {% endcomment %}
       {% unless post_matched %}
         {% if post.tags %}
+          {% assign cert_title_lower = cert.title | downcase %}
           {% for tag in post.tags %}
             {% assign tag_lower = tag | downcase | strip %}
-            {% if tag_lower contains cert_name_lower or tag_lower contains cert.title | downcase %}
+            {% if tag_lower contains cert_name_lower or tag_lower contains cert_title_lower %}
               {% assign post_matched = true %}
               {% break %}
             {% endif %}
@@ -136,9 +137,10 @@ permalink: /certifications/
     {% comment %} Check tags for certification keywords {% endcomment %}
     {% unless post_matched %}
       {% if post.tags %}
+        {% assign cert_title_lower = cert.title | downcase %}
         {% for tag in post.tags %}
           {% assign tag_lower = tag | downcase | strip %}
-          {% if tag_lower contains cert_name_lower or tag_lower contains cert.title | downcase %}
+          {% if tag_lower contains cert_name_lower or tag_lower contains cert_title_lower %}
             {% assign post_matched = true %}
             {% break %}
           {% endif %}
