feat: Google AdSense 광고 배치 최적화
- AdSense 컴포넌트 추가 (_includes/adsense.html)
  - in-article: 본문 중간 광고
  - sidebar: 사이드바 세로형 광고
  - footer: 하단 가로형 광고
  - multiplex: 관련 콘텐츠 스타일 광고
  - infeed: 포스트 목록 인피드 광고
  - responsive: 기본 반응형 광고
- 포스트 페이지 광고 배치
  - TOC 아래 (긴 글 500자 이상)
  - 콘텐츠 하단 멀티플렉스 광고
  - 관련 포스트 위 가로형 광고
- 홈페이지 광고 배치
  - 6번째 포스트 후 인피드 광고
  - 카테고리 섹션 위 반응형 광고
- CLS 방지 스타일 추가
  - 고정 높이 컨테이너
  - contain: layout style 적용
  - 다크모드 지원

--- a/index.html
+++ b/index.html
@@ -55,9 +55,18 @@ title: Home
     <div class="posts-list">
       {% for post in site.posts limit: 12 %}
         {% include post-card.html post=post %}
+        {% comment %} 6번째 포스트 후에 인피드 광고 삽입 {% endcomment %}
+        {% if forloop.index == 6 and site.google_adsense %}
+          {% include adsense.html type="infeed" %}
+        {% endif %}
       {% endfor %}
     </div>
   </section>
+
+  {% comment %} 카테고리 섹션 위 광고 {% endcomment %}
+  {% if site.google_adsense %}
+  {% include adsense.html type="responsive" %}
+  {% endif %}
 
   <!-- Categories Quick Links -->
   <section class="categories-section">
